# empathic

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MEMO.md  Makefile  PROMPT.md  README.md  REQUIREMENTS.md  SPEC.md  TODO.md  claude_desktop_config.json
src/: common.rs  config.rs  error.rs  executor.rs  fs.rs  lib.rs  logging.rs  main.rs  mcp.rs  platform.rs  platform_test.rs
src/lsp/: cache.rs  client.rs  idle_monitor.rs  mod.rs  performance.rs  project_detector.rs  resource.rs  server_config.rs  types.rs
src/lsp/manager/: core.rs  lifecycle.rs  mod.rs  tracker.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs
src/modules/: communication.rs  file_ops.rs  memory.rs  mod.rs  plugins.rs  security.rs
src/prompts/: mod.rs  templates.rs
src/rag/: embedded_client.rs  embedded_rag.rs  embeddings_native.rs  mod.rs  rag_client.rs  rag_indices.rs  rag_ingestion.rs  rag_path.rs  rag_search.rs  rag_stack.rs  rag_vectors.rs
src/resources/: manager.rs  mod.rs
src/tools/: bash_tool.rs  cargo.rs  comm_tools.rs  delete_file.rs  env.rs  executor.rs  executor_utils.rs  file_tools.rs  git.rs  gradle.rs  list_files.rs  make.rs  memory_tools.rs  mkdir.rs  mod.rs  npm.rs  plugin_tools.rs  rag_tools.rs  read_file.rs  replace.rs  shell.rs  str_replace.rs  symlink.rs  tool_base.rs  tool_registry.rs  tool_trait.rs  types.rs  write_file.rs
src/tools/lsp/: base.rs  completion.rs  diagnostics.rs  document_symbols.rs  find_references.rs  goto_definition.rs  hover.rs  mod.rs  workspace_symbols.rs
tests/: env.rs  git_executor.rs  integration_tests.rs  lsp_completion_tests.rs  lsp_comprehensive_tests.rs  lsp_diagnostics_tests.rs  lsp_hover_tests.rs  lsp_stability_tests.rs  lsp_workspace_symbols_tests.rs  read_file.rs  write_file.rs
tests/common/: content.rs  fs_helpers.rs  mcp.rs  mod.rs  setup.rs
tests/lsp/: client.rs  integration.rs  manager.rs  mod.rs
tests/lsp_tools/: completion.rs  diagnostics.rs  document_symbols.rs  find_references.rs  goto_definition.rs  hover.rs  mod.rs  workspace_symbols.rs
