[package]
name = "empathic"
version = "2.0.0"
edition = "2024"

[lib]
name = "empathic"
path = "src/lib.rs"

[[bin]]
name = "empathic"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
unicode-segmentation = "1.12"
walkdir = "2.5"
regex = "1.11"
glob = "0.3"
ignore = "0.4"
lsp-types = "0.97"
thiserror = "1.0"
url = "2.5"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
rand = "0.8"
futures = "0.3"
